manifests/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: sidecar-injector-webhook-cfg
  labels:
    app: sidecar-injector
webhooks:
- name: sidecar-injector.morven.me
  clientConfig:
    service:
      name: sidecar-injector-webhook-svc
      namespace: sidecar-injector
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMVENDQXBXZ0F3SUJBZ0lSQU5MYStUdElOMVRuM0tQMVYxbG8wamt3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa1pUYzBNMlpsTVRRdE5UWmtNaTAwWkRFMUxXSTRZVFV0TXpRd01qaGlZbVZtTmpobApNQ0FYRFRJeE1EZ3dNekV5TXpJd01Wb1lEekl3TlRFd056STNNVE16TWpBeFdqQXZNUzB3S3dZRFZRUURFeVJsCk56UXpabVV4TkMwMU5tUXlMVFJrTVRVdFlqaGhOUzB6TkRBeU9HSmlaV1kyT0dVd2dnR2lNQTBHQ1NxR1NJYjMKRFFFQkFRVUFBNElCandBd2dnR0tBb0lCZ1FET081L1MzK3hSVUdMQkNOVVF5WlRXT1VpeXdaQjYzQks0cm5VeQphamhJcjFtMlIrSW [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  namespaceSelector:
    matchLabels:
      sidecar-injection: enabled
